; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv__unknown_err_code.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv__unknown_err_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"Unknown system error %d\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"Unknown system error\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @uv__unknown_err_code to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @uv__unknown_err_code(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [32 x i8], align 16
  %4 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %5 = getelementptr inbounds [32 x i8], [32 x i8]* %3, i64 0, i64 0
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @snprintf(i8* %5, i32 32, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %6)
  %8 = getelementptr inbounds [32 x i8], [32 x i8]* %3, i64 0, i64 0
  %9 = call i8* @uv__strdup(i8* %8)
  store i8* %9, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i8*, i8** %4, align 8
  br label %15

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %14, %12
  %16 = phi i8* [ %13, %12 ], [ getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), %14 ]
  ret i8* %16
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i8* @uv__strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
